# aam-cli

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CREDITS.html  Cargo.toml  LICENSE  Makefile  README.md  about.hbs  about.toml  install.ps1  install.sh  test.aam  test2.aam  test_advanced_errors.aam
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: lsp.rs  main.rs  tui.rs  utils.rs
src/tui/: editor.rs  mod.rs  plugins.rs  ui.rs
tests/: test2.aam  test_errors.aam  test_syntax.aam
