[package]
name = "aam"
version = "0.1.0"
edition = "2024"
authors = ["INiNiDS"]
license = "Apache-2.0"
description = "AAM CLI is a CLI for AAM (learn more about AAM at https://aam.ininids.in.rs)"
readme = "README.md"

[dependencies]
aam-rs = "2.0.2"
ratatui = "0.30.0"
crossterm = "0.29.0"
clap = { version = "4.6.0", features = ["derive"] }
tui-textarea = { package = "tui-textarea-2", version = "0.10.2", features = ["search"] }
tokio = { version = "1.51.1", features = ["full"] }
tower-lsp = "0.20.0"
anyhow = "1.0"